# war-room-rules-practice

./: .gitignore  README.md
docs/: README.md  api.md  architecture.md  backend-java-rules.md  frontend-angular-rules.md  frontend-flutter-rules.md  frontend-react-rules.md  python-incident-analyzer-rules.md
postman/: War-Room-Local.postman_environment.json  (+1 more)
tools/python-incident-analyzer/: README.md  pyproject.toml
tools/python-incident-analyzer/reports/: incident-summary.csv  incident-summary.json  incident-summary.md
tools/python-incident-analyzer/src/incident_analyzer/: cli.py  config.py
tools/python-incident-analyzer/src/incident_analyzer/analysis/: incident_analysis.py  incident_analysis_service.py
tools/python-incident-analyzer/src/incident_analyzer/client/: incident_api_client.py  incident_api_error.py
tools/python-incident-analyzer/src/incident_analyzer/domain/: incident.py  incident_severity.py  incident_stats.py  incident_status.py  investigation_note.py
tools/python-incident-analyzer/src/incident_analyzer/reporting/: csv_report_writer.py  json_report_writer.py  markdown_report_writer.py
tools/python-incident-analyzer/tests/: test_cli.py
tools/python-incident-analyzer/tests/analysis/: test_incident_analysis_service.py
tools/python-incident-analyzer/tests/client/: test_incident_api_client.py
tools/python-incident-analyzer/tests/domain/: test_incident.py  test_incident_severity.py  test_incident_stats.py  test_incident_status.py  test_investigation_note.py
tools/python-incident-analyzer/tests/reporting/: test_report_writers.py
(+192 files in other folders)
